# WEB_Python17M10

./: main.py  pyproject.toml
quotes_project/: db.sqlite3
quotes_project/app_users/: forms.py  mongo_to_postgres.py  urls.py  users_to_mongo.py  views.py
quotes_project/app_users/templates/app_users/: login.html  logout.html  password_reset_complete.html  password_reset_email.html  register.html
quotes_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotes_project/quotes/migrations/: 0001_initial.py
quotes_project/quotes/static/quotes/: style.css
quotes_project/quotes/templates/quotes/: add_quote.html  author_detail.html  base.html  index.html
quotes_project/quotes/templatetags/: extract.py
quotes_project/quotes_project/: settings.py  urls.py
quotes_project/users/: urls.py  views.py
quotes_project/users/templates/users/: logout.html
quotes_project/utils/: quotes_to_mongo.py
quotes_project_notmpl/: manage.py
quotes_project_notmpl/quotes_project_notmpl/: asgi.py  settings.py  urls.py  wsgi.py
